--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+
 body {
+  font-family: 'Open Sans', sans-serif;
   background-color: #F3F7FA;
 }
 
