--- a/src/components/TicketList/TicketList.module.scss
+++ b/src/components/TicketList/TicketList.module.scss
@@ -17,6 +17,8 @@
     padding: 10px 20px;
     column-gap: 10px;
     cursor: pointer;
+
+    position: relative;
   }
 
   .label:hover {
@@ -29,6 +31,22 @@
     width: 20px;
     height: 20px;
     border: 1px solid #9ABBCE;
+  }
+
+  .label:active.label:after {
+    display: block;
+    content: '';
+    width: 12px;
+    height: 8px;
+    background: no-repeat url("Shape.svg");
+
+    position: absolute;
+    top: 16px;
+    left: 24px;
+  }
+
+  .label:active.label:before {
+    border: 1px solid #2196F3;
   }
 
   .checkbox {
