--- a/src/components/TicketList/TicketList.module.scss
+++ b/src/components/TicketList/TicketList.module.scss
@@ -19,6 +19,7 @@
     font-size: 13px;
     line-height: 20px;
     display: flex;
+    align-items: center;
     padding: 10px 20px;
     column-gap: 10px;
     cursor: pointer;
