changed structure app component and added logo

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -9,6 +9,17 @@ body {
 
 .app {
   width: 960px;
+  padding: 50px 103px;
   margin: 0 auto;
-  display: flex;
+
+  .header {
+    display: flex;
+    justify-content: center;
+  }
+
+  .main {
+    display: flex;
+  }
+
 }
+
