--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -4,6 +4,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
   font-size: 12px;
+  color: #4A4A4A;
   background-color: #F3F7FA;
 }
 
