--- a/src/components/Ticket/Ticket.module.scss
+++ b/src/components/Ticket/Ticket.module.scss
@@ -3,6 +3,12 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding-bottom: 10px;
+
+  .logo {
+    height: 36px;
+  }
 
   .price {
     color: $activeColor;
