--- a/src/components/TicketList/TicketList.module.scss
+++ b/src/components/TicketList/TicketList.module.scss
@@ -1,13 +1,35 @@
 @import "./src/variable";
 
+.main {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+.ticket {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  padding: 20px;
+  background-color: white;
+  border-radius: $borderRadius;
+  box-shadow: $boxShadow;
+}
+
 .filter {
   width: 232px;
   padding: 20px 0 10px 0;
   background-color: white;
   display: flex;
   flex-direction: column;
-  border-radius: 5px;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.10);
+  border-radius: $borderRadius;
+  box-shadow: $boxShadow;
 
   .header {
     margin-bottom: 10px;
