--- a/src/variable.scss
+++ b/src/variable.scss
@@ -1,6 +1,8 @@
 $activeColor: #2196F3;
 $focusColor: #F1FCFF;
 
+$activeColorFont: white;
+
 $borderRadius: 5px;
 
 $boxShadow: 0 2px 8px rgba(0, 0, 0, 0.10);
