added styles for btn

--- a/src/components/TicketList/TicketList.module.scss
+++ b/src/components/TicketList/TicketList.module.scss
@@ -103,7 +103,9 @@
   }
 }
 
-.btn {
-  border-radius: 5px;
+.btnLong {
+  height: 50px;
   background-color: $activeColor;
+  color: $activeColorFont;
+  border-radius: $borderRadius;
 }
