--- a/src/components/TicketList/TicketList.module.scss
+++ b/src/components/TicketList/TicketList.module.scss
@@ -1,16 +1,8 @@
 @import "./src/variable";
 
-.main {
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-
-  @media screen and (max-width: 960px) {
-    width: 100%;
-  }
-}
-
 .list {
+  grid-area: l;
+
   display: flex;
   flex-direction: column;
   row-gap: 20px;
@@ -27,7 +19,9 @@
 }
 
 .filter {
-  width: 232px;
+  grid-area: f;
+
+  height: 252px;
   padding: 20px 0 10px 0;
   background-color: white;
   display: flex;
@@ -37,7 +31,6 @@
 
   @media screen and (max-width: 960px) {
     width: 100%;
-    //margin-bottom: 20px;
     height: 52px;
     overflow: hidden;
   }
@@ -115,6 +108,8 @@
 }
 
 .tabs {
+  grid-area: t;
+
   display: flex;
   border-radius: 5px;
   border: 1px solid #DFE5EC;
@@ -122,6 +117,9 @@
 
   @media screen and (max-width: 960px) {
     width: 100%;
+  }
+  @media screen and (max-width: 475px) {
+    flex-direction: column;
   }
 
   .btn {
@@ -136,10 +134,18 @@
   .btn:not(:first-child,:last-child) {
     border-right: 1px solid #DFE5EC;
     border-left: 1px solid #DFE5EC;
+
+    @media screen and (max-width: 475px) {
+      border: 0;
+      border-top: 1px solid #DFE5EC;
+      border-bottom: 1px solid #DFE5EC;
+    }
   }
 }
 
 .btnLong {
+  grid-area: b;
+
   height: 50px;
   background-color: $activeColor;
   color: $activeColorFont;
