modified padding for sizing

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -13,6 +13,10 @@ body {
   padding: 50px 103px;
   margin: 0 auto;
 
+  @media screen and (max-width: 639px) {
+    padding: 20px;
+  }
+
   .header {
     display: flex;
     justify-content: center;
