added logic for view another information when filter is unchecked, an error occurred or loading

--- a/src/components/TicketList/TicketList.module.scss
+++ b/src/components/TicketList/TicketList.module.scss
@@ -6,6 +6,11 @@
   display: flex;
   flex-direction: column;
   row-gap: 20px;
+
+  .spinner {
+    //grid-area: l;
+    margin: auto auto;
+  }
 }
 
 .ticket {
