--- a/src/components/Tabs/Tabs.module.scss
+++ b/src/components/Tabs/Tabs.module.scss
@@ -23,6 +23,7 @@
     background-color: white;
 
     flex-grow: 1;
+    transition-duration: 200ms;
   }
 
   .btn:not(:first-child,:last-child) {
@@ -35,7 +36,7 @@
       border-bottom: 1px solid #DFE5EC;
     }
   }
-  .btnActive {
+  .btnActive, .btn:hover {
     background-color: $activeColor;
     color: $activeColorFont;
   }
