--- a/src/components/Ticket/Ticket.module.scss
+++ b/src/components/Ticket/Ticket.module.scss
@@ -14,19 +14,54 @@
     color: $activeColor;
     font-size: 24px;
     line-height: 24px;
+
+    p {
+      margin-bottom: 0;
+    }
   }
 }
 
 .table {
-  width: 100%;
-
-  thead {
-    color: #A0B0B9;
-    line-height: 18px;
-  }
-
-  tbody {
-    font-size: 14px;
-    line-height: 21px;
-  }
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas: 'head1 head2 head3'
+                        'body1 body2 body3';
 }
+
+.thead1 {
+  grid-area: head1;
+  color: #A0B0B9;
+  line-height: 18px;
+}
+
+.tbody1 {
+  font-size: 14px;
+  line-height: 21px;
+  grid-area: body1;
+}
+
+.thead2 {
+  grid-area: head2;
+  color: #A0B0B9;
+  line-height: 18px;
+}
+
+.tbody2 {
+  font-size: 14px;
+  line-height: 21px;
+  grid-area: body2;
+}
+
+.thead3 {
+  grid-area: head3;
+  color: #A0B0B9;
+  line-height: 18px;
+}
+
+.tbody3 {
+  font-size: 14px;
+  line-height: 21px;
+  grid-area: body3;
+}
+
+
