--- a/src/components/TicketsList/TicketsList.module.scss
+++ b/src/components/TicketsList/TicketsList.module.scss
@@ -1,12 +1,19 @@
 @import "./src/variable";
 
 .container {
-  grid-area: l
+  grid-area: l;
+
+  .btnLong {
+    grid-area: b;
+    width: 100%;
+    height: 50px;
+    background-color: $activeColor;
+    color: $activeColorFont;
+    border-radius: $borderRadius;
+  }
 }
 
 .list, .container {
-  //grid-area: l;
-
   display: flex;
   flex-direction: column;
   row-gap: 20px;
@@ -20,13 +27,4 @@
   background-color: white;
   border-radius: $borderRadius;
   box-shadow: $boxShadow;
-}
-
-.btnLong {
-  grid-area: b;
-  width: 100%;
-  height: 50px;
-  background-color: $activeColor;
-  color: $activeColorFont;
-  border-radius: $borderRadius;
 }
