--- a/src/components/TicketsList/TicketsList.module.scss
+++ b/src/components/TicketsList/TicketsList.module.scss
@@ -11,6 +11,10 @@
     color: $activeColorFont;
     border-radius: $borderRadius;
   }
+
+  .spin {
+    margin: auto 0;
+  }
 }
 
 .list, .container {
